# gsoap-test

./: .gitignore  README.md  test.cpp
calc/client/: calc_client.cpp
calc/gsoap/: build.sh  soapC.cpp  soapClient.cpp  soapClientLib.cpp  soapH.h  soapServer.cpp  soapServerLib.cpp  soapStub.h
calc/wsdl/: build.sh  calc.h
onvif/: CMakeLists.txt
onvif/client/: CMakeLists.txt  discover.cpp
onvif/gsoap/: ActionEngineBinding.CreateActionTriggers.req.xml  ActionEngineBinding.CreateActionTriggers.res.xml  ActionEngineBinding.CreateActions.req.xml  ActionEngineBinding.CreateActions.res.xml  ActionEngineBinding.DeleteActionTriggers.req.xml  ActionEngineBinding.DeleteActionTriggers.res.xml  ActionEngineBinding.DeleteActions.req.xml  ActionEngineBinding.DeleteActions.res.xml  ActionEngineBinding.GetActionTriggers.req.xml  ActionEngineBinding.GetActionTriggers.res.xml  ActionEngineBinding.GetActions.req.xml  ActionEngineBinding.GetActions.res.xml  ActionEngineBinding.GetServiceCapabilities.req.xml  ActionEngineBinding.GetServiceCapabilities.res.xml  ActionEngineBinding.GetSupportedActions.req.xml  ActionEngineBinding.GetSupportedActions.res.xml  ActionEngineBinding.ModifyActionTriggers.req.xml  ActionEngineBinding.ModifyActionTriggers.res.xml  ActionEngineBinding.ModifyActions.req.xml  ActionEngineBinding.ModifyActions.res.xml  AnalyticsDeviceBinding.CreateAnalyticsEngineControl.req.xml  AnalyticsDeviceBinding.CreateAnalyticsEngineControl.res.xml  AnalyticsDeviceBinding.CreateAnalyticsEngineInputs.req.xml  AnalyticsDeviceBinding.CreateAnalyticsEngineInputs.res.xml  AnalyticsDeviceBinding.DeleteAnalyticsEngineControl.req.xml  AnalyticsDeviceBinding.DeleteAnalyticsEngineControl.res.xml  AnalyticsDeviceBinding.DeleteAnalyticsEngineInputs.req.xml  AnalyticsDeviceBinding.DeleteAnalyticsEngineInputs.res.xml  AnalyticsDeviceBinding.GetAnalyticsDeviceStreamUri.req.xml  AnalyticsDeviceBinding.GetAnalyticsDeviceStreamUri.res.xml  AnalyticsDeviceBinding.GetAnalyticsEngine.req.xml  AnalyticsDeviceBinding.GetAnalyticsEngine.res.xml  AnalyticsDeviceBinding.GetAnalyticsEngineControl.req.xml  AnalyticsDeviceBinding.GetAnalyticsEngineControl.res.xml  AnalyticsDeviceBinding.GetAnalyticsEngineControls.req.xml  AnalyticsDeviceBinding.GetAnalyticsEngineControls.res.xml  AnalyticsDeviceBinding.GetAnalyticsEngineInput.req.xml  AnalyticsDeviceBinding.GetAnalyticsEngineInput.res.xml  AnalyticsDeviceBinding.GetAnalyticsEngineInputs.req.xml  AnalyticsDeviceBinding.GetAnalyticsEngineInputs.res.xml  (+656 more)
onvif/gsoap/c/: ActionEngineBinding.CreateActions.req.xml  ActionEngineBinding.DeleteActionTriggers.res.xml  ActionEngineBinding.GetActions.req.xml  ActionEngineBinding.GetActions.res.xml  ActionEngineBinding.GetSupportedActions.res.xml  AnalyticsDeviceBinding.CreateAnalyticsEngineInputs.res.xml  AnalyticsDeviceBinding.DeleteAnalyticsEngineControl.res.xml  AnalyticsDeviceBinding.GetAnalyticsEngine.req.xml  AnalyticsDeviceBinding.GetAnalyticsEngine.res.xml  AnalyticsDeviceBinding.GetAnalyticsEngineInputs.res.xml  AnalyticsDeviceBinding.GetAnalyticsEngines.req.xml  AnalyticsDeviceBinding.GetAnalyticsEngines.res.xml  AnalyticsDeviceBinding.GetServiceCapabilities.res.xml  AnalyticsDeviceBinding.GetVideoAnalyticsConfiguration.req.xml  AnalyticsDeviceBinding.GetVideoAnalyticsConfiguration.res.xml  DeviceBinding.CreateCertificate.req.xml  DeviceBinding.CreateCertificate.res.xml  DeviceBinding.GetDNS.req.xml  (+209 more)
onvif/wsdl/: build_local.sh  onvif-c.h  onvif.h
probe/: CMakeLists.txt
probe/client/: CMakeLists.txt  test.cpp
probe/discovery/: CMakeLists.txt  test.c
probe/gsoap/: .gitignore  build.sh
probe/gsoap/c/: soapC.c  soapClient.c  soapClientLib.c  soapH.h  soapServer.c  soapServerLib.c  soapStub.h
probe/gsoap/c11/: soapC.cpp  soapClient.cpp  soapClientLib.cpp  soapH.h  soapServer.cpp  soapServerLib.cpp  soapStub.h
probe/gsoap/cpp/: soapC.cpp  soapClient.cpp  soapClientLib.cpp  soapH.h  soapServer.cpp  soapServerLib.cpp  soapStub.h
probe/server/: CMakeLists.txt  test.cpp  test1.cpp
probe/wsdl/: .gitignore  build.sh  build_local.sh  build_online.sh  onvif-c.h  onvif-c11.h  onvif-cpp.h
(+527 files in other folders)
